# cli

./: .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  embedded.go  go.mod  go.sum  install.sh  main.go  package.json  tsconfig.json
.changeset/: atomic-write-file.md  automatic-cli-release.md  clean-v1-cli-reset.md  remove-dead-profile-search.md  remove-persona-evidence-fields.md  research-os-commands.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-hygiene.yml  release.yml  version.yml
_legacy-go/: .golangci.yml  Makefile  main.go
_legacy-go/cmd/: dispatch_test.go  doctor.go  enrich.go  logout.go  products.go  replay.go  skill_test.go  stdin.go  synthesize.go  uninstall.go  uninstall_test.go  whoami.go
_legacy-go/workflows/: ci.yml
cmd/: direction.go  dispatch_test.go  doctor.go  enrich.go  experiment.go  hypotheses.go  init.go  knowledge.go  login.go  login_test.go  logout.go  output.go  patterns.go  personas.go  products.go  replay.go  root.go  skill.go  synthesize.go  telemetry.go  timeline.go
decisions/: oauth-pkce-cli-2026-04-28.md
internal/apiclient/: client.go  types.go
internal/auth/: auth.go
internal/oauth/: oauth.go
internal/telemetry/: client.go  client_test.go  commands.go  disclosure.go  disclosure_test.go  (+6 more)
scripts/: build-binaries.ts  check-release-intent.ts  ensure-dependabot-changeset.ts  tag-release-if-needed.ts  verify-release-tag.ts
src/: app.ts  auth.rs  env.ts  exit-codes.ts  index.ts  main.rs  telemetry.rs  version.ts
(+86 files in other folders)
