[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying customer behavioral intelligence from Bridge"
license = "MIT"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
keyring = "3.6.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
