[package]
name = "oriyn"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying customer behavioral intelligence from Oriyn"
license = "MIT"

[[bin]]
name = "oriyn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
keyring = { version = "3.6.3", features = ["apple-native"] }
open = "5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
posthog-rs = "0.5"
uuid = { version = "1", features = ["v4"] }
